[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/TitleScreen/TitleControl.gd" type="Script" id=1]
[ext_resource path="res://Scenes/TitleScreen/TextButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/TitleScreen/BG.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/JetBrainsMono-Medium.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Fonts/Flat-it - BioSans-Regular.otf" type="DynamicFontData" id=6]
[ext_resource path="res://Scenes/Decorative/Crystal/Crystal.tscn" type="PackedScene" id=8]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

float grid(vec2 uv, float velocity, float iTime)
{
    vec2 size = vec2(uv.y, uv.y * uv.y * 0.2) * 0.01;
    uv += vec2(0.0, iTime * 4.0 * (velocity + 0.05));
    uv = abs(fract(uv) - 0.5);
 	vec2 lines = smoothstep(size, vec2(0.0), uv);
 	lines += smoothstep(size * 5.0, vec2(0.0), uv) * 0.4 * velocity;
    return clamp(lines.x + lines.y, 0.0, 3.0);
}


void fragment()
{
    vec2 uv = (2.0 * FRAGCOORD.xy.xy - (1.0 / SCREEN_PIXEL_SIZE).xy)/(1.0 / SCREEN_PIXEL_SIZE).y;
    float velocity = 1.0;
   
    {
        // Grid
//        vec3 col = vec3(0.0, 0.1, 0.2);
		vec3 col = texture(SCREEN_TEXTURE, SCREEN_UV).rgb;
        if (uv.y < -0.2)
        {
            uv.y = 3.0 / (abs(uv.y + 0.2) + 0.05);
            uv.x *= uv.y * 1.0;
            float gridVal = grid(uv, velocity, TIME);
            col = mix(col, vec3(0.4, 0.5, 1.3), gridVal);
        }
        else
        {
            uv.y -= velocity * 1.1 - 0.51;
        }

        col = mix(vec3(col.r, col.r, col.r) * 0.5, col,  0.7);

        COLOR = vec4(col,1.0);
    }
      
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 288
outline_size = 3
outline_color = Color( 0.65098, 1, 0.988235, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 80
outline_size = 2
outline_color = Color( 0.9, 0.2, 0.2, 0.1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 160
outline_size = 3
outline_color = Color( 0.65098, 1, 0.988235, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0.0705882, 0.145098, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=7]
size = 80
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lights_BG" type="CanvasLayer" parent="."]

[node name="BG" parent="Lights_BG" instance=ExtResource( 3 )]

[node name="Node2D" type="Node2D" parent="Lights_BG"]
position = Vector2( 1128, 240 )
scale = Vector2( 1.2, 1.2 )
__meta__ = {
"_edit_group_": true
}

[node name="Crystal" parent="Lights_BG/Node2D" instance=ExtResource( 8 )]
position = Vector2( 10, 0 )

[node name="Crystal" parent="Lights_BG/Node2D/Crystal" index="0"]
energy = 2.0
range_layer_max = 1

[node name="Crystal2" parent="Lights_BG/Node2D" instance=ExtResource( 8 )]
position = Vector2( 1306, 0 )

[node name="Crystal" parent="Lights_BG/Node2D/Crystal2" index="0"]
energy = 2.0
range_layer_max = 1

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -669.0
margin_top = 64.0
margin_right = 669.0
margin_bottom = 419.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.5, 0.5, 0.55, 1 )
custom_constants/shadow_offset_x = 7
custom_constants/shadow_offset_y = 7
text = "Solonoid"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -1919.0
margin_top = 390.628
margin_right = 1918.0
margin_bottom = 490.628
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.33, 1, 0.98, 0.2 )
custom_constants/shadow_offset_x = 7
custom_constants/shadow_offset_y = 7
text = "High score : 000"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -504.0
margin_right = 192.0
margin_bottom = -292.0
rect_pivot_offset = Vector2( 192, 106 )
custom_fonts/font = SubResource( 5 )
text = "Play"
valign = 1

[node name="ControlsButton" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -384.0
margin_top = -248.0
margin_right = 384.0
margin_bottom = -36.0
rect_pivot_offset = Vector2( 384, 106 )
custom_fonts/font = SubResource( 5 )
text = "Controls"

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 96.0
margin_top = -176.0
margin_right = 926.0
margin_bottom = -56.0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 824.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 7 )
text = " Music By Dos-88 "
align = 1
valign = 1
uppercase = true

[connection signal="TextButton_Pressed" from="PlayButton" to="." method="_on_PlayButton_TextButton_Pressed"]
[connection signal="TextButton_Pressed" from="ControlsButton" to="." method="_on_ControlsButton_TextButton_Pressed"]

[editable path="Lights_BG/Node2D/Crystal"]
[editable path="Lights_BG/Node2D/Crystal2"]
